# bftd-legacy

./: Cargo.toml  README.md
assets/: bundle.ron
assets/characters/: grand_dad.ron  hh.ron
assets/core/: backward.rhai  forward.rhai  idle.rhai  idle_debug.rhai
lib/: Cargo.toml
lib/src/: assets.rs  character.rs  lib.rs  rect.rs
src/: assets.rs  config.rs  fsm.rs  input.rs  lib.rs  main.rs  rect.rs  timer.rs
src/battle/: fsm.rs  local.rs  mod.rs  net.rs  player.rs  script.rs
src/input/: mod.rs  sampler.rs
src/render/: mod.rs  sprite.rs  sprite.wgsl
src/sampler/: keyboard.rs  mod.rs
