[package]
name = "bftd"
version = "0.1.0"
authors = ["frostu8 <frostu8@protonmail.com>"]
edition = "2021"

description = "Battle for the Domain"

[dependencies]
log = "0.4"
ggez = "0.7"
semver = "1.0"
ron = "0.7"
serde = "1.0"

anyhow = "1.0"
env_logger = "0.9"

[dependencies.bftd-lib]
path = "./lib/"

[dependencies.glam]
version = "0.20"
features = ["mint"]

[dependencies.rhai]
version = "1.6.1"
features = ["f32_float"]

[profile.dev]
opt-level = 1

[workspace]
members = ["./lib/"]

