[package]
name = "bftd"
version = "0.1.0"
authors = ["frostu8 <frostu8@protonmail.com>"]
edition = "2021"

description = "Battle for the Domain"

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "a3b2418" }
winit = "0.26"
image = "0.24"
pollster = "0.2"
gilrs = { version = "0.9", features = ["serde-serialize"] }
uuid = { version = "1.1", features = ["serde"] }

log = "0.4"
semver = "1.0"
ron = "0.7"
serde = "1.0"
bevy_tasks = "0.7"

anyhow = "1.0"
env_logger = "0.9"

backroll = "0.4"
backroll_transport_udp = "0.4"

[dependencies.bftd-lib]
path = "./lib/"

[dependencies.glam]
version = "0.20"
features = ["mint"]

[dependencies.rhai]
version = "1.6.1"
features = ["f32_float", "sync"]

[dependencies.bytemuck]
version = "1.9"
features = ["derive"]

[profile.dev]
opt-level = 1

[workspace]
members = ["./lib/"]

