[package]
name = "bftd-lib"
version = "0.1.0"
authors = ["frostu8 <frostu8@protonmail.com>"]
edition = "2021"

description = "Shared libraries for bftd"

[dependencies]

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.glam]
version = "0.20"
features = ["serde", "mint"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

